products sort complte and responsed

--- a/src/components/mainPage/main.css
+++ b/src/components/mainPage/main.css
@@ -14,8 +14,8 @@
     90deg,
     rgba(255, 255, 255, 1) 0%,
     rgba(240, 226, 217, 1) 10%,
-    rgba(236, 207, 192, 1) 40%,
-    rgba(236, 207, 192, 1) 60%,
+    rgb(243, 219, 207) 40%,
+    rgb(243, 219, 207) 60%,
     rgba(240, 226, 217, 1) 90%,
     rgba(255, 255, 255, 1) 100%
   );
